--- a/cn/RTC/API/api_addvideowatermark1.dita
+++ b/cn/RTC/API/api_addvideowatermark1.dita
@@ -22,9 +22,8 @@
   <dd>该方法已废弃，请使用 <xref keyref="addVideoWatermark2"/> 作为替代。</dd>
        </dlentry>
    </dl>
-   <p>该方法将一张 PNG
-       图片作为水印添加到本地发布的直播视频流上，同一直播频道中的观众，旁路推流观众，甚至采集设备都能看到或采集到该水印图片。如果你仅仅希望在旁路直播推流中添加水印，请参考
-  <xref keyref="setLiveTranscoding"/> 中描述的用法。</p>
+   <p>该方法将一张 PNG 图片作为水印添加到本地发布的直播视频流上，同一直播频道中的用户，旁路推流观众，甚至采集设备都能看到或采集到该水印图片。如果你仅仅希望在旁路直播推流中添加水印，请参考
+                    <xref keyref="setLiveTranscoding"/> 中描述的用法。</p>
    <note type="attention">
        <ul>
   <li>在本地直播和旁路推流中，URL 的定义不同。本地直播中，URL 指本地直播视频上图片的本地绝对/相对路径；旁路推流中，URL 指旁路推流视频上图片的地址。</li>
