--- a/cn/RTC/API/api_playeffect3.dita
+++ b/cn/RTC/API/api_playeffect3.dita
@@ -68,10 +68,10 @@
        </plentry>
        <plentry id="publish">
   <pt>publish</pt>
-           <pd><p>是否将音效发布至远端： 
+           <pd><p>是否将音效发布至远端：
       <ul>
-          <li><ph keyref="true"/>: 发布。本地用户和远端用户都能听到音效。</li>
-          <li><ph keyref="false"/>: 不发布。只有本地用户能听到音效。</li>
+          <li><ph keyref="true"/>: 将音效发布至远端。本地用户和远端用户都能听到音效。</li>
+          <li><ph keyref="false"/>: 不将音效发布至远端。只有本地用户能听到音效。</li>
       </ul></p>
   </pd>
        </plentry>
