--- a/cn/RTC/API/enum_audioroutetype.dita
+++ b/cn/RTC/API/enum_audioroutetype.dita
@@ -2,54 +2,54 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="enum_audioroutetype">
     <title><ph keyref="AUDIO_ROUTE_TYPE"/></title>
-    <shortdesc id="short"><ph id="shortdesc">语音路由。</ph></shortdesc>
+    <shortdesc id="short"><ph id="shortdesc">语音路由的类型。</ph></shortdesc>
     <refbody>
         <section id="parameters">
    <title>枚举值</title>
    <parml>
        <plentry>
   <pt><ph keyref="AUDIO_ROUTE_DEFAULT"/></pt>
-  <pd>使用默认的语音路由。</pd>
+  <pd>默认的语音路由。</pd>
        </plentry>
        <plentry>
   <pt><ph keyref="AUDIO_ROUTE_HEADSET"/></pt>
-  <pd>使用耳机为语音路由。</pd>
+  <pd>耳机。</pd>
        </plentry>
        <plentry>
   <pt><ph keyref="AUDIO_ROUTE_EARPIECE"/></pt>
-  <pd>使用听筒为语音路由。</pd>
+  <pd>听筒。</pd>
        </plentry>
        <plentry>
   <pt><ph keyref="AUDIO_ROUTE_HEADSET_NO_MIC"/></pt>
-  <pd>使用不带麦的耳机为语音路由。</pd>
+  <pd>不带麦的耳机。</pd>
        </plentry>
        <plentry>
   <pt><ph keyref="AUDIO_ROUTE_SPEAKERPHONE"/></pt>
-  <pd>使用手机的扬声器为语音路由。</pd>
+  <pd>手机的扬声器。</pd>
        </plentry>
        <plentry>
   <pt><ph keyref="AUDIO_ROUTE_LOUDSPEAKER"/></pt>
-  <pd>使用外接的扬声器为语音路由。</pd>
+  <pd>外接的扬声器。</pd>
        </plentry>
        <plentry>
   <pt><ph keyref="AUDIO_ROUTE_BLUETOOTH"/></pt>
-  <pd>使用蓝牙耳机为语音路由。</pd>
+  <pd>蓝牙耳机。</pd>
        </plentry>
        <plentry>
   <pt><ph keyref="AUDIO_ROUTE_USB"/></pt>
-  <pd>使用 USB 外围设备为语音路由（仅适用于 macOS）。</pd>
+  <pd>USB 外围设备（仅适用于 macOS）。</pd>
        </plentry>
        <plentry>
   <pt><ph keyref="AUDIO_ROUTE_HDMI"/></pt>
-  <pd>使用 HDMI 外围设备为语音路由（仅适用于 macOS）。</pd>
+  <pd>HDMI 外围设备（仅适用于 macOS）。</pd>
        </plentry>
        <plentry>
   <pt><ph keyref="AUDIO_ROUTE_DISPLAYPORT"/></pt>
-  <pd>使用 DisplayPort 外围设备为语音路由（仅适用于 macOS）。</pd>
+  <pd>DisplayPort 外围设备（仅适用于 macOS）。</pd>
        </plentry>
        <plentry>
   <pt><ph keyref="AUDIO_ROUTE_AIRPLAY"/></pt>
-  <pd>使用 Apple AirPlay 为语音路由（仅适用于 macOS）。</pd>
+  <pd>Apple AirPlay（仅适用于 macOS）。</pd>
        </plentry>
    </parml>
         </section></refbody>
