--- a/cn/RTC/API/enum_audioprofiletype.dita
+++ b/cn/RTC/API/enum_audioprofiletype.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="enum_audioprofiletype">
     <title><ph keyref="AUDIO_PROFILE_TYPE"/></title>
-    <shortdesc id="short"><ph id="shortdesc">音频属性，设置采样率、码率、编码模式和声道数。</ph></shortdesc>
+    <shortdesc id="short"><ph id="shortdesc">音频属性，包括采样率、码率、编码模式和声道数。</ph></shortdesc>
     <refbody>
         <section id="parameters">
    <title>枚举值</title>
@@ -10,42 +10,42 @@
        <plentry id="0">
   <pt><ph keyref="AUDIO_PROFILE_DEFAULT"/></pt>
   <pd>
-      <p>0: 默认值。
+      <p>0: 默认的音频属性。
       <ul id="ul_sbg_mxd_p4b">
- <li>直播场景下：48 KHz 采样率，音乐编码，单声道，编码码率最大值为 64 Kbps。</li>
+ <li>直播场景下：48 kHz 采样率，音乐编码，单声道，编码码率最大值为 64 Kbps。</li>
  <li props="windows">通信场景下：<ul id="ul_y1l_lxd_p4b">
-<li>Windows 平台：16 KHz 采样率，语音编码，单声道，编码码率最大值为 16 Kbps。</li>
-<li>Android、macOS、iOS 平台：32 KHz 采样率，语音编码，单声道，编码码率最大值为 18 Kbps。</li>
+<li>Windows 平台：16 kHz 采样率，语音编码，单声道，编码码率最大值为 16 Kbps。</li>
+<li>Android、macOS、iOS 平台：32 kHz 采样率，语音编码，单声道，编码码率最大值为 18 Kbps。</li>
      </ul></li>
       </ul></p>
   </pd>
        </plentry>
        <plentry id="1">
   <pt><ph keyref="AUDIO_PROFILE_SPEECH_STANDARD"/></pt>
-  <pd>1: 指定 32 KHz 采样率，语音编码，单声道，编码码率最大值为 18 Kbps。
+  <pd>1: 指定 32 kHz 采样率，语音编码，单声道，编码码率最大值为 18 Kbps。
   </pd>
        </plentry>
        <plentry id="2">
   <pt><ph keyref="AUDIO_PROFILE_MUSIC_STANDARD"/></pt>
-  <pd>2: 指定 48 KHz 采样率，音乐编码，单声道，编码码率最大值为 64 Kbps。
+  <pd>2: 指定 48 kHz 采样率，音乐编码，单声道，编码码率最大值为 64 Kbps。
   </pd>
        </plentry>
        <plentry id="3">
   <pt><ph keyref="AUDIO_PROFILE_MUSIC_STANDARD_STEREO"/></pt>
-  <pd>3: 指定 48 KHz 采样率，音乐编码，双声道，编码码率最大值为 80 Kbps。</pd>
+  <pd>3: 指定 48 kHz 采样率，音乐编码，双声道，编码码率最大值为 80 Kbps。</pd>
        </plentry>
        <plentry id="4">
   <pt><ph keyref="AUDIO_PROFILE_MUSIC_HIGH_QUALITY"/></pt>
-  <pd>4: 指定 48 KHz 采样率，音乐编码，单声道，编码码率最大值为 96 Kbps。</pd>
+  <pd>4: 指定 48 kHz 采样率，音乐编码，单声道，编码码率最大值为 96 Kbps。</pd>
        </plentry>
        <plentry id="5">
   <pt><ph keyref="AUDIO_PROFILE_MUSIC_HIGH_QUALITY_STEREO"/></pt>
-  <pd>5: 指定 48 KHz 采样率，音乐编码，双声道，编码码率最大值为 128 Kbps。</pd>
+  <pd>5: 指定 48 kHz 采样率，音乐编码，双声道，编码码率最大值为 128 Kbps。</pd>
        </plentry>
        <plentry id="6" props="windows">
   <pt><ph keyref="AUDIO_PROFILE_IOT"/></pt>
   <pd>
-      <p>6: 指定 16 KHz 采样率，语音编码，单声道，应用回声消除算法 AES。</p>
+      <p>6: 指定 16 kHz 采样率，语音编码，单声道，应用回声消除算法 AES。</p>
   </pd>
        </plentry>
        <plentry>
