--- a/cn/RTC/API/enum_audiomixingerrortype.dita
+++ b/cn/RTC/API/enum_audiomixingerrortype.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="enum_audiomixingerrortype">
     <title><ph keyref="AUDIO_MIXING_ERROR_TYPE"/></title>
-    <shortdesc id="short"><ph id="shortdesc">混音音乐文件错误码。</ph></shortdesc>
+    <shortdesc id="short"><ph id="shortdesc">播放音乐文件时可能出现的错误。</ph></shortdesc>
     <refbody>
         <section id="parameters">
    <title>枚举值</title>
@@ -21,7 +21,7 @@
        </plentry>
        <plentry>
   <pt><ph keyref="AUDIO_MIXING_ERROR_OK"/></pt>
-  <pd>音乐文件状态正常。</pd>
+  <pd>音乐文件正常播放。</pd>
        </plentry>
    </parml>
         </section></refbody>
