--- a/cn/RTC/API/enum_audiomixingstatetype.dita
+++ b/cn/RTC/API/enum_audiomixingstatetype.dita
@@ -11,10 +11,10 @@
   <pt><ph keyref="AUDIO_MIXING_STATE_PLAYING"/></pt>
   <pd>
       <p>710: 音乐文件正常播放。</p>
-      <p>该状态表示 SDK 处于以下阶段：
+      <p>该状态表示 SDK 处于以下情况中的一种：
       <ul>
- <li>成功调用 <xref keyref="startAudioMixing"/> 播放音乐文件。</li>
- <li>成功调用 <xref keyref="resumeAudioMixing"/> 恢复播放音乐文件。</li>
+ <li>SDK 成功调用 <xref keyref="startAudioMixing"/> 播放音乐文件。</li>
+ <li>SDK 成功调用 <xref keyref="resumeAudioMixing"/> 恢复播放音乐文件。</li>
       </ul>
       </p>
   </pd>
@@ -36,7 +36,7 @@
        <plentry>
   <pt><ph keyref="AUDIO_MIXING_STATE_FAILED"/></pt>
   <pd>
-      <p>714: 音乐文件播放失败。</p>
+      <p>714: 音乐文件播放出错。</p>
       <p>错误类型详见 <xref keyref="AUDIO_MIXING_ERROR_TYPE"/>。</p>
   </pd>
        </plentry>
