--- a/cn/RTC/API/enum_audioreverbpreset.dita
+++ b/cn/RTC/API/enum_audioreverbpreset.dita
@@ -80,9 +80,7 @@
        </plentry>
        <plentry>
   <pt><ph keyref="AUDIO_VIRTUAL_STEREO"/></pt>
-  <pd>虚拟立体声。虚拟立体声是指将单声道的音轨渲染出立体声的效果，使频道内所有用户听到有空间感的声音效果。为达到更好的虚拟立体声效果，Agora
-      推荐在调用该方法前将 <xref keyref="setAudioProfile"/> 的 <parmname>profile</parmname> 参数设置为
-      <xref href="enum_audioprofiletype.dita#enum_audioprofiletype/5"/>。</pd>
+  <pd>虚拟立体声。虚拟立体声是指将单声道的音轨渲染出立体声的效果。</pd>
        </plentry>
    </parml>
         </section></refbody>
