minor edits to addInject and addPublish

--- a/cn/RTC/API/api_addpublishstreamurl.dita
+++ b/cn/RTC/API/api_addpublishstreamurl.dita
@@ -31,7 +31,7 @@
    <parml>
        <plentry id="url">
   <pt>url</pt>
-  <pd>CDN 推流地址，格式为 RTMP。该字符长度不能超过 1024 字节。url 不支持中文字符等特殊字符。</pd>
+  <pd>CDN 推流地址，格式为 RTMP 或 RTMPS。该字符长度不能超过 1024 字节。url 不支持中文字符等特殊字符。</pd>
        </plentry>
        <plentry>
   <pt>transcodingEnabled</pt>
