--- a/cn/RTC/API/api_addinjectstreamurl.dita
+++ b/cn/RTC/API/api_addinjectstreamurl.dita
@@ -28,7 +28,7 @@
       <li>该方法需要在加入频道后调用。</li>
   </ul>
        </note>
-   <p>该方法将正在播放的音视频作为音视频源导入到正在进行的直播中。可主要应用于赛事直播、多人看视频互动等直播场景。调用该方法后，SDK 会在本地触发 <xref keyref="onStreamInjectedStatus"/> 回调，报告输入在线媒体流的状态；成功输入媒体流后，该音视频流会出现在频道中，频道内所有用户都会收到 <xref keyref="onUserJoined"/> 回调，其中 <parmname>uid</parmname> 为 666。该音视频流会出现在频道中。</p>
+   <p>该方法将正在播放的音视频作为音视频源导入到正在进行的直播中。可主要应用于赛事直播、多人看视频互动等直播场景。调用该方法后，SDK 会在本地触发 <xref keyref="onStreamInjectedStatus"/> 回调，报告输入在线媒体流的状态；成功输入媒体流后，该音视频流会出现在频道中，频道内所有用户都会收到 <xref keyref="onUserJoined"/> 回调，其中 <parmname>uid</parmname> 为 666。</p>
         </section>
         <section id="parameters"><title>参数</title>
    <parml>
