--- a/cn/RTC/API/enum_areacode.dita
+++ b/cn/RTC/API/enum_areacode.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="enum_areacode">
     <title><ph keyref="AREA_CODE"/></title>
-    <shortdesc id="short"><ph id="shortdesc">访问区域。访问区域支持位操作。</ph></shortdesc>
+    <shortdesc id="short"><ph id="shortdesc">访问区域，即 SDK 连接的服务器所在的区域。</ph></shortdesc>
     <refbody>
         <section id="parameters">
    <title>枚举值</title>
