--- a/cn/RTC/API/enum_audioeffectpreset.dita
+++ b/cn/RTC/API/enum_audioeffectpreset.dita
@@ -54,7 +54,7 @@
       <note type="attention">使用该预设音效前，你需要将 <xref keyref="setAudioProfile"/> 的
      <parmname>profile</parmname> 参数设置为 <ph
      keyref="AUDIO_PROFILE_MUSIC_HIGH_QUALITY"/> 或 <ph
-     keyref="AUDIO_PROFILE_MUSIC_HIGH_QUALITY_STEREO"/>，否则该预设音效设置无效。</note>
+     keyref="AUDIO_PROFILE_MUSIC_HIGH_QUALITY_STEREO"/>，否则该预设音效的设置无效。</note>
   </pd>
        </plentry>
        <plentry>
@@ -131,7 +131,7 @@ keyref="AUDIO_PROFILE_MUSIC_HIGH_QUALITY_STEREO"
       <note type="attention">使用该预设音效前，你需要将 <xref keyref="setAudioProfile"/> 的
  <parmname>profile</parmname> 参数设置为 <ph
      keyref="AUDIO_PROFILE_MUSIC_HIGH_QUALITY"/> 或 <ph
-keyref="AUDIO_PROFILE_MUSIC_HIGH_QUALITY_STEREO"/>，否则该预设音效设置无效。</note>
+keyref="AUDIO_PROFILE_MUSIC_HIGH_QUALITY_STEREO"/>，否则该预设音效的设置无效。</note>
   </pd>
        </plentry>
        <plentry>
@@ -141,7 +141,7 @@ keyref="AUDIO_PROFILE_MUSIC_HIGH_QUALITY_STEREO"/>，否则该预设音效设置
       <note type="attention">使用该预设音效前，你需要将 <xref keyref="setAudioProfile"/> 的
  <parmname>profile</parmname> 参数设置为 <ph
      keyref="AUDIO_PROFILE_MUSIC_HIGH_QUALITY"/> 或 <ph
-keyref="AUDIO_PROFILE_MUSIC_HIGH_QUALITY_STEREO"/>，否则该预设音效设置无效。</note>
+keyref="AUDIO_PROFILE_MUSIC_HIGH_QUALITY_STEREO"/>，否则该预设音效的设置无效。</note>
   </pd>
        </plentry>
        <plentry>
