--- a/cn/RTC/API/class_userinfo.dita
+++ b/cn/RTC/API/class_userinfo.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="class_userinfo">
     <title><ph keyref="UserInfo"/></title>
-    <shortdesc id="short"><ph id="shortdesc">用户信息类。</ph></shortdesc>
+    <shortdesc id="short"><ph id="shortdesc">用户信息。</ph></shortdesc>
     <refbody>
         <section id="prototype">
    <p conref="../conref/conref_rtc_api.dita#apidef/UserInfo"/>
