--- a/cn/RTC/API/class_watermarkoptions.dita
+++ b/cn/RTC/API/class_watermarkoptions.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="class_watermarkoptions">
     <title><ph keyref="WatermarkOptions"/></title>
-    <shortdesc id="short"><ph id="shortdesc">待添加的水印图片的设置选项。</ph></shortdesc>
+    <shortdesc id="short"><ph id="shortdesc">水印图片的设置。</ph></shortdesc>
     <refbody>
         <section id="prototype">
    <p conref="../conref/conref_rtc_api.dita#apidef/WatermarkOptions"/>
@@ -13,10 +13,10 @@
        <plentry>
   <pt>visibleInPreview</pt>
   <pd>
-      <p>是否将水印设为预览时本地可见：
+      <p>水印图片在本地视频预览中是否可见：
  <ul>
-     <li><ph keyref="true"/>：(默认) 预览时水印本地可见；</li>
-     <li><ph keyref="false"/>：预览时水印本地不可见。</li>
+     <li><ph keyref="true"/>：(默认) 水印图片在本地视频预览中可见；</li>
+     <li><ph keyref="false"/>：水印图片在本地视频预览中不可见。</li>
  </ul>
       </p>
   </pd>
@@ -24,26 +24,28 @@
        <plentry>
   <pt>positionInLandscapeMode</pt>
   <pd>
-      <p>视频编码模式为横屏时（详见进阶功能《视频采集旋转》）的水印坐标。详见 <xref keyref="Rectangle"/> ：
+      <p>横屏模式下，显示水印图片的区域。详见 <xref keyref="Rectangle"/>：
  <ul>
      <li><codeph>x</codeph>：左上角的横向偏移。</li>
      <li><codeph>y</codeph>：左上角的纵向偏移。</li>
      <li><codeph>width</codeph>：该区域的宽 （pixel）。</li>
      <li><codeph>height</codeph>：该区域的高（pixel）。</li>
  </ul>
+     横屏模式的定义详见基础功能《设置视频编码属性》。
       </p>
   </pd>
        </plentry>
        <plentry>
   <pt>positionInPortraitMode</pt>
   <pd>
-      <p>视频编码模式为竖屏时（详见进阶功能《视频采集旋转》）的水印坐标。详见 <xref keyref="Rectangle"/> ：
+      <p>竖屏模式下，显示水印图片的区域。详见 <xref keyref="Rectangle"/> ：
  <ul>
      <li><codeph>x</codeph>：左上角的横向偏移。</li>
      <li><codeph>y</codeph>：左上角的纵向偏移。</li>
      <li><codeph>width</codeph>：该区域的宽 （pixel）。</li>
      <li><codeph>height</codeph>：该区域的高（pixel）。</li>
  </ul>
+      竖屏模式的定义详见基础功能《设置视频编码属性》。
       </p>
   </pd>
        </plentry>
