--- a/cn/RTC/API/class_videocanvas.dita
+++ b/cn/RTC/API/class_videocanvas.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="class_videocanvas">
     <title><ph keyref="VideoCanvas"/></title>
-    <shortdesc id="short"><ph id="shortdesc"><apiname keyref="VideoCanvas"/> 类的视频显示设置。</ph></shortdesc>
+    <shortdesc id="short"><ph id="shortdesc">视频显示设置。</ph></shortdesc>
     <refbody>
         <section id="prototype">
    <p conref="../conref/conref_rtc_api.dita#apidef/VideoCanvas"/>
@@ -30,18 +30,18 @@
      <dd>v3.0.0</dd>
  </dlentry>
       </dl>
-      <p>能标识频道的频道名，长度在 64 字节以内的字符。以下为支持的字符集范围（共 89 个字符）：
+      <p>频道名，即能够唯一标识频道、长度在 64 字节以内的字符。以下为支持的字符集范围（共 89 个字符）：
  <ul>
      <li>26 个小写英文字母 a~z；</li>
      <li>26 个大写英文字母 A~Z；</li>
      <li>10 个数字 0~9；</li>
      <li>空格；</li>
-     <li>"!"、"#"、"$"、"%"、"&amp;"、"("、")"、"+"、"-"、":"、";"、"&lt;"、"="、"."、"&gt;"、"?"、"@"、"["、"]"、"^"、"_"、" {"、"}"、"|"、"~"、","。</li>
+     <li>其他符号："!"、"#"、"$"、"%"、"&amp;"、"("、")"、"+"、"-"、":"、";"、"&lt;"、"="、"."、"&gt;"、"?"、"@"、"["、"]"、"^"、"_"、" {"、"}"、"|"、"~"、","。</li>
  </ul>
  <note type="attention">
      <ul>
-<li>该参数默认值为空字符 ""。如果用户是通过 <xref keyref="IRtcEngine"/> 类的 <xref keyref="joinChannel1"/> 方法加入频道的，则将参数设为默认值，表示该用户在频道内的渲染视图。</li>
-<li>如果用户是通过 <xref keyref="IChannel"/> 类的 <apiname keyref="joinChannel1"/> 方法加入频道的，则将该参数设为该 <apiname keyref="IChannel"/> 类对应的 <codeph>channelId</codeph>，表示该用户在该 <codeph>channelId</codeph> 对应频道内的渲染视图。</li>
+<li>该参数默认值为空字符 ""。如果用户是通过 <xref keyref="IRtcEngine"/> 类的 <xref keyref="joinChannel1"/> 方法加入频道的，则将参数设为默认值。此时 <codeph>VideoCanvas</codeph> 设置的是该用户在频道内的视图。</li>
+<li>如果用户是通过 <xref keyref="IChannel"/> 类的 <apiname keyref="joinChannel1"/> 方法加入频道的，则将该参数设为该 <apiname keyref="IChannel"/> 类对应的 <codeph>channelId</codeph>。此时 <codeph>VideoCanvas</codeph> 设置的是用户在该 <codeph>channelId</codeph> 对应频道内的视图。</li>
      </ul>
  </note>
       </p>
@@ -63,13 +63,13 @@
       <p>视图镜像模式，详见 <xref keyref="VIDEO_MIRROR_MODE_TYPE"/>。
  <note type="attention">
      <ul>
-<li>本地视图镜像模式：
+<li>对于本地用户：
     <ul>
-        <li>如果你使用前置摄像头，默认启动本地视图镜像模式。</li>
-        <li>如果你使用后置摄像头，默认关闭本地视图镜像模式。</li>
+        <li>如果使用前置摄像头，默认启动镜像模式。</li>
+        <li>如果使用后置摄像头，默认关闭镜像模式。</li>
     </ul>
 </li>
-<li>远端用户视图镜像模式：默认关闭远端用户的镜像模式。</li>
+<li>对于远端用户：默认关闭镜像模式。</li>
      </ul>
  </note>
       </p>
