--- a/cn/whiteboard/2.1_release_whiteboard_android.md
+++ b/cn/whiteboard/2.1_release_whiteboard_android.md
@@ -1,6 +1,111 @@
 本文提供 Agora 互动白板 SDK 的发版说明。
 
+## 2.12.25 版
+
+2.12.25 版于 2021 年 4 月 28 日发布。
+
+该版本更新 `@netless/white-audio-plugin2` 和 `@netless/white-video-plugin2 `插件，修复了部分显示问题。
+
+## 2.12.24 版
+
+2.12.24 版于 2021 年 4 月 27 日发布。
+
+#### 新增特性
+
+该版本支持[ `@netless/white-audio-plugin2`](https://github.com/netless-io/whiteboard-demo/tree/master/packages/white-audio-plugin) 和 [`@netless/white-video-plugin2`](https://github.com/netless-io/react-whiteboard/tree/master/packages/white-video-plugin)，用于在 Android 端观看 Web 端白板上播放的音频或视频。
+
+#### 问题修复
+
+- 更新 `@netless/white-audio-plugin` 至 1.2.23，修复了白板回放中音频文件的显示问题。
+- 修复了 `getRoomState` 异步方法没有回调的问题。
+
+## 2.12.22 版
+
+2.12.22 版于 2021 年 4 月 22 日发布。
+
+该版本更新 `white-web-sdk` 至 2.12.14。
+
+## 2.12.21 版
+
+2.12.21 版于 2021 年 4 月 22 日发布。
+
+该版本有以下改进：
+
+- 更改 `RoomListener` 和 `PlayerListener` 为主线程回调。
+- 更新 `white-web-sdk` 至 2.12.13。
+- 更新 `@netless/iframe-bridge` 至 2.12.17，优化了白板回放的 iframe 插件逻辑。
+
+## 2.12.20 版
+
+2.12.20 版于 2021 年 4 月 17 日发布。
+
+该版本更新 `white-web-sdk` 至 2.12.12。
+
+## 2.12.19 版
+
+2.12.19 版于 2021 年 4 月 14 日发布。
+
+该版本有以下改进：
+
+- 新增 `PptParams` 的构造方法，无需配置 `scheme` 参数。
+- 更新 `@netless/iframe-bridge` 至 2.0.14，优化了 iframe 插件。
+
+## 2.12.18 版
+
+2.12.18 版于 2021 年 4 月 12 日发布。
+
+该版本更新 `@netless/iframe-bridge` 至 2.0.13，优化了消息通知。
+
+## 2.12.17 版
+
+2.12.17 版于 2021 年 4 月 12 日发布。
+
+该版本更新 `@netless/iframe-bridge` 至 2.0.11，优化了 Android 端的显示问题。
+
+## 2.12.16 版
+
+2.12.16 版于 2021 年 4 月 9 日发布。
+
+该版本更新 `@netless/iframe-bridge` 至 2.0.10，优化了 Android 端的显示问题。
+
+## 2.12.15 版
+
+2.12.15 版于 2021 年 4 月 10 日发布。
+
+该版本更新 `white-web-sdk` 至 2.12.9。
+
+## 2.12.14 版
+
+2.12.14 版于 2021 年 4 月 9 日发布。
+
+该版本更新 `@netless/iframe-bridge` 至 2.0.9，修复了 H5 课件的显示问题。
+
+## 2.12.13 版
+
+2.12.13 版于 2021 年 4 月 9 日发布。
+
+该版本恢复了 `Displayer` 接口的 `scaleIframeToFit` 方法。
+
+## 2.12.12 版
+
+2.12.12 版于 2021 年 4 月 9 日发布。
+
+该版本更新 `@netless/iframe-bridge` 至 2.0.8，修复了 H5 课件的显示问题。
+
+## 2.12.11 版
+
+2.12.11 版于 2021 年 4 月 6 日发布。
+
+该版本更新 `white-web-sdk` 至 2.12.8，修复了设置跟随者模式无法立即生效的问题。
+
+## 2.12.10 版
+
+2.12.10 版于 2021 年 4 月 2 日发布。
+
+该版本更新 `white-web-sdk` 至 2.12.7，优化了动态 PPT 的显示。
+
 ## 2.12.9 版
+
 该版本于 2021 年 3 月 30 日发布。
 
 该版本更新 `@netless/iframe-bridge` 至 2.0.7。
