--- a/cn/whiteboard/2.3_release_whiteboard_web.md
+++ b/cn/whiteboard/2.3_release_whiteboard_web.md
@@ -1,5 +1,119 @@
 本文提供 Agora 互动白板 SDK 的发版说明。
 
+## 2.12.15 版
+
+2.12.15 版于 2021 年 4 月 28 日发布。
+
+#### 新增特性
+
+该版本新增 `changeToClick` 和 `changeToText`，分别设置快速切换到点选工具（`clicker`）和文字工具（`text`）的快捷键。
+
+#### 改进
+
+该版本优化了动态 PPT 的加载速度。
+
+#### 问题修复
+
+该版本修复了暂停白板回放后，动态 PPT 内媒体文件没有停止播放的问题。
+
+## 2.12.14 版
+
+2.12.14 版于 2021 年 4 月 22 日发布。
+
+#### 新增特性
+
+该版本新增音视频裁剪功能。
+
+#### 改进
+
+该版本优化了动态 PPT 的预加载逻辑。
+
+#### 问题修复
+
+该版本修复了如下问题：
+
+- 预览 PPT 页面时，页面上的音视频播放条没有显示。
+- 部分情况下，`room.state.cameraState` 更新不及时。
+
+## 2.12.13 版
+
+2.12.13 版于 2021 年 4 月 21 日发布。
+
+#### 问题修复
+
+该版本修复了如下问题：
+
+- 在白板回放过程中频繁调用 `seekToProgressTime` 方法，可能会出现异常。
+- 部分情况下，文本框在编辑模式和非编辑模式之间的切换不及时。
+
+## 2.12.12 版
+
+2.12.12 版于 2021 年 4 月 16 日发布。
+
+#### 改进
+
+该版本有如下改进：
+
+- 提高了动态 PPT 的颜色兼容性。
+- 优化了动态 PPT 的分散对齐和两端对齐功能。
+- 优化了动态 PPT 文本缩进的显示。
+
+## 2.12.11 版
+
+2.12.11 版于 2021 年 4 月 15 日发布。
+
+#### 新增特性
+
+该版本的新增特性如下：
+
+- 新增 `syncBlockTimstamp` 方法，用于设置音视频和白板的同步延时。
+- 新增 `customInput` 接口，用于设置自定义输入源。
+
+#### 改进
+
+该版本优化了 `canvas` 渲染模式下的显示性能。
+
+#### 问题修复
+
+该版本修复了如下问题：
+
+- `InvisiblePlugin` 部分情况下的异常行为。
+- 放大或缩小视角之后，文字的位置可能错位。
+
+## 2.12.9 版
+
+2.12.9 版于 2021 年 4 月 9 日发布。
+
+#### 新增特性
+
+该版本支持在白板回放房间使用 Token 鉴权。
+
+#### 问题修复
+
+该版本修复了如下问题：
+
+- 某些情况下已经消失的光标会再次出现。
+- 在某些低版本浏览器中，`canvas` 渲染引擎对图像的渲染不准确。
+
+## 2.12.8 版
+
+2.12.8 版于 2021 年 4 月 6 日发布。
+
+#### 改进
+
+该版本优化了日志的上报逻辑。
+
+#### 问题修复
+
+该版本修复了设置跟随者模式无法立即生效的问题。
+
+## 2.12.7 版
+
+2.12.7 版于 2021 年 3 月 31 日发布，修复了如下问题：
+
+- 动态 PPT 中同时有动画出现和动画消失时，图形显示不完整。
+- 动态 PPT 中的部分动画和公式无法识别，导致出现白屏。
+
 ## 2.12.6 版
 
 该版本于 2021 年 3 月 29 日发布，修复了部分组件有时消失不见的问题。
