--- a/cn/whiteboard/2.3_release_whiteboard_web.md
+++ b/cn/whiteboard/2.3_release_whiteboard_web.md
@@ -66,7 +66,7 @@
 
 该版本的新增特性如下：
 
-- 新增 `syncBlockTimstamp` 方法，用于设置音视频和白板的同步延时。
+- 新增 `syncBlockTimstamp` 方法，用于设置发送白板内容的延时。该方法可以用于保证白板内容与音视频同步发送到远端。
 - 新增 `customInput` 接口，用于设置自定义输入源。
 
 #### 改进
