--- a/cn/RTC/API/class_videoencoderconfiguration.dita
+++ b/cn/RTC/API/class_videoencoderconfiguration.dita
@@ -255,7 +255,7 @@
  </dlentry>
       </dl>
       <p>
- 本地发送视频的镜像模式，只影响远端用户看到的视频画面。详见 <xref keyref="VIDEO_MIRROR_MODE_TYPE" />。
+ 发送编码视频时是否开启镜像模式，只影响远端用户看到的视频画面。详见 <xref keyref="VIDEO_MIRROR_MODE_TYPE" />。
       </p>
       <note type="attention">默认关闭镜像模式。</note>
   </pd>
