--- a/cn/RTC/API/class_videoframe.dita
+++ b/cn/RTC/API/class_videoframe.dita
@@ -2,14 +2,14 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="class_videoframe">
     <title><ph keyref="VideoFrame"/></title>
-    <shortdesc id="short"><ph id="shortdesc"><apiname keyref="VideoFrame"/> 定义。</ph></shortdesc>
+    <shortdesc id="short"><ph id="shortdesc">视频帧的属性设置。</ph></shortdesc>
     <refbody>
         <section id="prototype">
    <p conref="../conref/conref_rtc_api.dita#apidef/VideoFrame"/>
         </section>
         <section id="detailed_desc">
    
-   <p>视频数据的格式为 YUV420。缓冲区给出的是指向指针的指针，但接口使用者不能修改缓冲区的指针，只能修改缓冲区的内容。</p>
+   <p>视频数据的格式为 YUV420。缓冲区给出的是指向指针的指针，该接口不能修改缓冲区的指针，只能修改缓冲区的内容。</p>
         </section>
         <section id="parameters">
    <title><text conref="../conref/conref_api_metadata.dita#metadata/property"/></title>
