--- a/cn/RTC/API/api_onaudiomixingstatechanged.dita
+++ b/cn/RTC/API/api_onaudiomixingstatechanged.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="api_onaudiomixingstatechanged">
     <title><ph keyref="onAudioMixingStateChanged"/></title>
-    <shortdesc id="short"><ph id="shortdesc">本地用户的音乐文件播放状态已改变回调。</ph></shortdesc>
+    <shortdesc id="short"><ph id="shortdesc">音乐文件的播放状态已改变回调。</ph></shortdesc>
     <prolog>
         <metadata>
    <keywords>
