--- a/cn/RTC/API/class_remoteaudiostats.dita
+++ b/cn/RTC/API/class_remoteaudiostats.dita
@@ -12,7 +12,7 @@
    <parml>
        <plentry>
   <pt><ph keyref="uid"/></pt>
-  <pd>用户 ID，指定是哪个用户/主播的音频流。</pd>
+  <pd>远端用户的用户 ID。</pd>
        </plentry>
        <plentry>
   <pt>quality</pt>
@@ -25,7 +25,7 @@
        <plentry>
   <pt>jitterBufferDelay</pt>
   <pd>
-      <p>接收端到网络抖动缓冲的网络延迟（毫秒）。<note type="attention">当接收端为观众且 <xref
+      <p>音频接收端到网络抖动缓冲的网络延迟（毫秒）。<note type="attention">当接收端为观众且 <xref
 keyref="AUDIENCE_LATENCY_LEVEL_TYPE"/> 为 1 时，该参数不生效。</note></p>
   </pd>
        </plentry>
@@ -39,11 +39,11 @@ keyref="AUDIENCE_LATENCY_LEVEL_TYPE"/> 为 1 时，该参数不生效。</note><
        </plentry>
        <plentry>
   <pt>receivedSampleRate</pt>
-  <pd>统计周期内接收到的远端音频采样率。</pd>
+  <pd>统计周期内接收到的远端音频流的采样率。</pd>
        </plentry>
        <plentry>
   <pt>receivedBitrate</pt>
-  <pd>接收流在统计周期内的平均码率（Kbps）。</pd>
+  <pd>接收到的远端音频流在统计周期内的平均码率（Kbps）。</pd>
        </plentry>
        <plentry>
   <pt>totalFrozenTime</pt>
@@ -51,11 +51,11 @@ keyref="AUDIENCE_LATENCY_LEVEL_TYPE"/> 为 1 时，该参数不生效。</note><
        </plentry>
        <plentry>
   <pt>frozenRate</pt>
-  <pd>远端用户在加入频道后发生音频卡顿的累计时长占音频总有效时长的百分比 (%)。音频有效时长是指远端用户加入频道后音频未被停止发送或禁用的时长。</pd>
+  <pd>音频卡顿的累计时长占音频总有效时长的百分比 (%)。音频有效时长是指远端用户加入频道后音频未被停止发送或禁用的时长。</pd>
        </plentry>
        <plentry>
   <pt>totalActiveTime</pt>
-  <pd>音频有效时长（毫秒），即远端用户/主播加入频道后，既没有停止发送音频流，也没有禁用音频模块的通话时长。</pd>
+  <pd>音频有效时长（毫秒），即远端用户加入频道后，既没有停止发送音频流，也没有禁用音频模块的通话时长。</pd>
        </plentry>
        <plentry>
   <pt>publishDuration</pt>
