--- a/cn/RTC/API/api_ivideodevicemanager_setdevice.dita
+++ b/cn/RTC/API/api_ivideodevicemanager_setdevice.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="api_ivideodevicemanager_setdevice">
     <title><ph keyref="IVideoDeviceManager_setDevice"/></title>
-    <shortdesc id="short"><ph id="shortdesc">指定设备。</ph></shortdesc>
+    <shortdesc id="short"><ph id="shortdesc">通过设备 ID 指定设备。</ph></shortdesc>
     <prolog>
         <metadata>
    <keywords>
