--- a/cn/RTC/API/api_joinchannelwithuseraccount2.dita
+++ b/cn/RTC/API/api_joinchannelwithuseraccount2.dita
@@ -25,7 +25,7 @@
    <p>该方法允许本地用户使用 User Account 加入频道。成功加入频道后，会触发以下回调：
        <ul>
   <li>本地：<xref keyref="onLocalUserRegistered"/>、<xref keyref="onJoinChannelSuccess"/> 和 <xref keyref="onConnectionStateChanged"></xref> 回调。</li>
-  <li>通信场景下的用户和直播场景下的主播加入频道后，远端会依次触发 <xref keyref="onUserJoined"/> 和 <xref keyref="onUserInfoUpdated"/> 回调。</li>
+  <li>远端：通信场景下的用户和直播场景下的主播加入频道后，远端会分别触发 <xref keyref="onUserJoined"/> 和 <xref keyref="onUserInfoUpdated"/> 回调。</li>
        </ul></p>
    <p>用户成功加入频道后，默认订阅频道内所有其他用户的音频流和视频流，因此产生用量并影响计费。如果想取消订阅，可以通过调用相应的 <apiname>mute</apiname> 方法实现。</p>
    <note type="attention">
