--- a/cn/RTC/API/class_rtcengineconfig.dita
+++ b/cn/RTC/API/class_rtcengineconfig.dita
@@ -17,7 +17,7 @@
        <plentry>
   <pt props="windows">appId</pt>
   <pt props="android">mAppId</pt>
-  <pd><p>Agora 为 app 开发项目签发的 App ID。使用同一个 App ID 的 app 才能进入同一个频道进行通话或直播。</p>
+  <pd><p>Agora 为 app 开发项目签发的 App ID。使用同一个 App ID 的用户才能进入同一个频道进行通话或直播。</p>
       <p props="windows">一个 App ID 只能用于创建一个 <xref keyref="IRtcEngine"/>。如果需要更换 App ID，必须先调用 <xref keyref="release"/> 销毁当前 IRtcEngine，
  再调用 <xref keyref="createAgoraRtcEngine"/> 和 <xref keyref="create2"/> 重新创建 <apiname keyref="IRtcEngine"></apiname>。</p>
       <p props="android ios mac">一个 App ID 只能用于创建一个 <xref keyref="IRtcEngine"/>。如果需要更换 App ID，必须先调用 <xref keyref="release"/> 销毁当前 IRtcEngine，再调用 <xref keyref="create2"/> 重新创建 <apiname keyref="IRtcEngine"></apiname>。</p>
@@ -36,7 +36,7 @@
   <pt>logConfig</pt>
   <pd><p>Agora SDK 日志文件配置，详见 <xref keyref="LogConfig"/>。</p>
   <p>默认情况下，SDK 会生成 <codeph>agorasdk.log</codeph>、<codeph>agorasdk_1.log</codeph>、<codeph>agorasdk_2.log</codeph>、<codeph>agorasdk_3.log</codeph>、<codeph>agorasdk_4.log</codeph> 这 5 个日志文件。</p>
-  <p>每个文件的默认大小为 1024 KB。日志文件为 UTF-8 编码。最新的日志永远写在 <codeph>agorasdk.log</codeph> 中。<codeph>agorasdk.log</codeph> 写满后，SDK 会从 1-4 中删除修改时间最早的一个文件，然后将 <codeph>agorasdk.log</codeph> 重命名为该文件，并建立新的 <parmname>agorasdk.log</parmname> 写入最新的日志。</p></pd>
+  <p>每个日志文件的默认大小为 1024 KB，编码格式为 UTF-8。最新的日志永远写在 <codeph>agorasdk.log</codeph> 中。<codeph>agorasdk.log</codeph> 写满后，SDK 会从 1-4 中删除修改时间最早的一个文件，然后将 <codeph>agorasdk.log</codeph> 重命名为该文件，并建立新的 <parmname>agorasdk.log</parmname> 写入最新的日志。</p></pd>
        </plentry>
    </parml>
         </section></refbody>
