--- a/cn/RTC/API/class_rtcimage.dita
+++ b/cn/RTC/API/class_rtcimage.dita
@@ -22,19 +22,19 @@
        </plentry>
        <plentry>
   <pt>x</pt>
-  <pd>水印或背景图片在视频帧左上角的横轴坐标。</pd>
+  <pd>图片在视频画面上的 x 坐标 (pixel)，以输出视频画面的左上角为原点。</pd>
        </plentry>
        <plentry>
   <pt>y</pt>
-  <pd>水印或背景图片在视频帧左上角的纵轴坐标。</pd>
+  <pd>图片在视频画面上的 y 坐标 (pixel)，以输出视频画面的左上角为原点。</pd>
        </plentry>
        <plentry>
   <pt>width</pt>
-  <pd>水印或背景图片在视频帧上的宽度 (pixel)。</pd>
+  <pd>图片在视频画面上的宽度 (pixel)。</pd>
        </plentry>
        <plentry>
   <pt>height</pt>
-  <pd>水印或背景图片在视频帧上的高度 (pixel)。</pd>
+  <pd>图片在视频画面上的高度 (pixel)。</pd>
        </plentry>
    </parml>
         </section></refbody>
