--- a/cn/RTC/API/class_rtcstats.dita
+++ b/cn/RTC/API/class_rtcstats.dita
@@ -13,7 +13,7 @@
        <plentry>
   <pt>duration</pt>
   <pd>
-      <p>本地用户通话时长（秒）。累计值。</p>
+      <p>本地用户通话时长（秒），累计值。</p>
       </pd>
        </plentry>
        <plentry>
