updated topic templates

--- a/cn/RTC/config/subject-scheme-rtc.ditamap
+++ b/cn/RTC/config/subject-scheme-rtc.ditamap
@@ -20,7 +20,8 @@
             <subjectdef keys="framework">
                 <subjectdef keys="electron"/>
                 <subjectdef keys="unity"/>
-                <subjectdef keys="react"/>
+                <subjectdef keys="rn"/>
+            <subjectdef keys="flutter"/>
                 <subjectdef keys="rust"/>
             </subjectdef>
             <subjectdef keys="cn"/>
