--- a/cn/templates/Class topic template.dita
+++ b/cn/templates/Class topic template.dita
@@ -5,7 +5,13 @@
     <shortdesc id="short"><ph id="shortdesc"><?oxy-placeholder content="Provide a short description for this class."?></ph></shortdesc>
     <refbody>
         <section id="prototype">
-            <p conref="../conref/conref_rtc_api.dita#apidef/${answer(@apiID)}"/>
+            <codeblock props="android"></codeblock>
+            <codeblock props="ios mac"></codeblock>
+            <codeblock props="windows"></codeblock>
+            <codeblock props="electron"></codeblock>
+            <codeblock props="unity"></codeblock>
+            <codeblock props="rn"></codeblock>
+            <codeblock props="flutter"></codeblock>
         </section>
         <section id="detailed_desc">
             <dl outputclass="since">
