--- a/cn/templates/API topic template.dita
+++ b/cn/templates/API topic template.dita
@@ -11,7 +11,13 @@
         </metadata>
     </prolog>
     <refbody><section id="prototype">
-        <p conref="../conref/conref_rtc_api.dita#apidef/${answer(@apiID)}"/>
+        <codeblock props="android"></codeblock>
+        <codeblock props="ios mac"></codeblock>
+        <codeblock props="windows"></codeblock>
+        <codeblock props="electron"></codeblock>
+        <codeblock props="unity"></codeblock>
+        <codeblock props="rn"></codeblock>
+        <codeblock props="flutter"></codeblock>
         </section>
         <section id="detailed_desc">
             <dl outputclass="since">
