--- a/cn/templates/API topic template.dita
+++ b/cn/templates/API topic template.dita
@@ -11,13 +11,13 @@
         </metadata>
     </prolog>
     <refbody><section id="prototype">
-        <codeblock props="android"></codeblock>
-        <codeblock props="ios mac"></codeblock>
-        <codeblock props="windows"></codeblock>
-        <codeblock props="electron"></codeblock>
-        <codeblock props="unity"></codeblock>
-        <codeblock props="rn"></codeblock>
-        <codeblock props="flutter"></codeblock>
+        <codeblock props="android" outputclass="language-java"></codeblock>
+        <codeblock props="ios mac" outputclass="language-objectivec"></codeblock>
+        <codeblock props="windows" outputclass="language-cpp"></codeblock>
+        <codeblock props="electron" outputclass="language-typescript"></codeblock>
+        <codeblock props="unity" outputclass="language-csharp"></codeblock>
+        <codeblock props="rn" outputclass="language-typescript"></codeblock>
+        <codeblock props="flutter" outputclass="language-dart"></codeblock>
         </section>
         <section id="detailed_desc">
             <dl outputclass="since">
