--- a/cn/RTC/API/enum_audiencelatencyleveltype.dita
+++ b/cn/RTC/API/enum_audiencelatencyleveltype.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="enum_audiencelatencyleveltype">
     <title><ph keyref="AUDIENCE_LATENCY_LEVEL_TYPE"/></title>
-    <shortdesc id="short"><ph id="shortdesc">直播频道中观众端（用户角色为观众的客户端）的延时级别。仅在用户角色设为 <ph keyref="CLIENT_ROLE_AUDIENCE"/> 时才生效。</ph></shortdesc>
+    <shortdesc id="short"><ph id="shortdesc">直播频道中观众的延时级别。该枚举仅在用户角色设为 <ph keyref="CLIENT_ROLE_AUDIENCE"/> 时才生效。</ph></shortdesc>
     <refbody>
         <section id="parameters">
    <title>枚举值</title>
