--- a/cn/RTC/API/class_injectstreamconfig.dita
+++ b/cn/RTC/API/class_injectstreamconfig.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="class_injectstreamconfig">
     <title><ph keyref="InjectStreamConfig"/></title>
-    <shortdesc id="short"><ph id="shortdesc">输入的外部音视频流的配置。
+    <shortdesc id="short"><ph id="shortdesc">输入外部音视频流的配置。
         </ph></shortdesc>
     <refbody>
         <section id="prototype">
@@ -16,45 +16,45 @@
             <parml>
                 <plentry>
                     <pt>width</pt>
-                    <pd>外部视频流输入的宽度。默认值为 0，即保留视频原始宽度。</pd>
+                    <pd>外部视频流输入后的宽度。默认值为 0，即保留视频原始宽度。</pd>
                 </plentry>
                 <plentry>
                     <pt>height</pt>
-                    <pd>外部视频流输入的高度。默认值为 0，即保留视频原始高度。</pd>
+                    <pd>外部视频流输入后的高度。默认值为 0，即保留视频原始高度。</pd>
                 </plentry>
                 <plentry>
                     <pt>videoGop</pt>
-                    <pd>外部视频流输入的 GOP，单位为帧。默认值为 30 帧。</pd>
+                    <pd>外部视频流输入的 GOP（帧）。默认值为 30 帧。</pd>
                 </plentry>
                 <plentry>
                     <pt>videoFramerate</pt>
-                    <pd>外部视频流输入的帧率。默认值为 15 fps。</pd>
+                    <pd>外部视频流输入的帧率（fps）。默认值为 15 fps。</pd>
                 </plentry>
                 <plentry>
                     <pt>videoBitrate</pt>
                     <pd>
-                        <p>外部视频流输入的码率。默认设置为 400 Kbps。</p>
+                        <p>外部视频流输入的码率（Kbps）。默认设置为 400 Kbps。</p>
                         <note type="attention">视频码率的设置与分辨率相关。如果设置的视频码率超出合理范围，SDK
                             会按照合理区间自动设置码率。</note>
                     </pd>
                 </plentry>
                 <plentry>
                     <pt>audioSampleRate</pt>
-                    <pd><p>外部音频流输入的采样率。默认值为 48000。详见 <xref keyref="AUDIO_SAMPLE_RATE_TYPE"/>。</p>
+                    <pd><p>外部音频流输入的采样率。默认值为 48000 Hz。详见 <xref keyref="AUDIO_SAMPLE_RATE_TYPE"/>。</p>
                         <note type="attention"> 声网建议目前采用默认值，不要自行设置。 </note>
                     </pd>
                 </plentry>
                 <plentry>
                     <pt>audioBitrate</pt>
                     <pd>
-                        <p>外部音频流输入的码率。默认值为 48 Kbps。</p>
+                        <p>外部音频流输入的码率（Kbps）。默认值为 48 Kbps。</p>
                         <note type="attention">声网建议目前采用默认值，不要自行设置。</note>
                     </pd>
                 </plentry>
                 <plentry>
                     <pt>audioChannels</pt>
                     <pd>
-                        <p>外部音频流输入的频道数。 <ul>
+                        <p>外部音频流输入后的频道数。 <ul>
                                 <li>1: 单声道（默认）</li>
                                 <li>2: 双声道</li>
                             </ul>
