--- a/cn/RTC/API/api_playeffect2.dita
+++ b/cn/RTC/API/api_playeffect2.dita
@@ -11,7 +11,23 @@
         </metadata>
     </prolog>
     <refbody><section id="prototype">
-        <p outputclass="codeblock" conref="../conref/conref_rtc_api.dita#apidef/playEffect2"/>
+            <p outputclass="codeblock">
+                <codeblock props="android" outputclass="language-java"/>
+                <codeblock props="ios mac" outputclass="language-objectivec"/>
+                <codeblock props="windows" outputclass="language-cpp">virtual int playEffect(int soundId, const char* filePath, int loopCount, double pitch, double pan, int gain, bool publish = false) = 0;</codeblock>
+                <codeblock props="electron" outputclass="language-typescript">playEffect(
+                    soundId: number,
+                    filePath: string,
+                    loopCount: number,
+                    pitch: number,
+                    pan: number,
+                    gain: number,
+                    publish: number
+                    ): number</codeblock>
+                <codeblock props="unity" outputclass="language-csharp"/>
+                <codeblock props="rn" outputclass="language-typescript"/>
+                <codeblock props="flutter" outputclass="language-dart"/>
+            </p>
         </section>
         <section id="detailed_desc">
             <dl outputclass="deprecated">
