--- a/cn/RTC/config/keys-rtc-api-cpp.ditamap
+++ b/cn/RTC/config/keys-rtc-api-cpp.ditamap
@@ -7969,6 +7969,13 @@
                 </keywords>
             </topicmeta>
         </keydef>
+        <keydef keys="submit-ticket" href="https://agora-ticket.agora.io/" scope="external" format="html">
+            <topicmeta>
+                <keywords>
+                    <keyword>提交工单</keyword>
+                </keywords>
+            </topicmeta>
+        </keydef>
     </topichead>
     <topichead navtitle="Other variables">
         <keydef keys="filePath-example">
