--- a/cn/RTC/API/api_onaudioeffectfinished.dita
+++ b/cn/RTC/API/api_onaudioeffectfinished.dita
@@ -12,8 +12,16 @@
     </prolog>
     <refbody>
         <section id="prototype">
-   
-   <p outputclass="codeblock" conref="../conref/conref_rtc_api.dita#apidef/onAudioEffectFinished"/>
+            <p outputclass="codeblock">
+                <codeblock props="android" outputclass="language-java"/>
+                <codeblock props="ios mac" outputclass="language-objectivec"/>
+                <codeblock props="windows" outputclass="language-cpp">virtual void onAudioEffectFinished(int soundId) {
+                    }</codeblock>
+                <codeblock props="electron" outputclass="language-typescript">on(evt: 'audioEffectFinished', cb: (soundId: number) => void): this;</codeblock>
+                <codeblock props="unity" outputclass="language-csharp"/>
+                <codeblock props="rn" outputclass="language-typescript"/>
+                <codeblock props="flutter" outputclass="language-dart"/>
+            </p>
         </section>
         <section id="detailed_desc">
    
