--- a/cn/RTC/API/api_onaudiomixingstatechanged.dita
+++ b/cn/RTC/API/api_onaudiomixingstatechanged.dita
@@ -11,8 +11,19 @@
         </metadata>
     </prolog>
     <refbody><section id="prototype">
-        
-        <p outputclass="codeblock" conref="../conref/conref_rtc_api.dita#apidef/onAudioMixingStateChanged"/>
+            <p outputclass="codeblock">
+                <codeblock props="android" outputclass="language-java"/>
+                <codeblock props="ios mac" outputclass="language-objectivec"/>
+                <codeblock props="windows" outputclass="language-cpp">virtual void onAudioMixingStateChanged(AUDIO_MIXING_STATE_TYPE state, AUDIO_MIXING_ERROR_TYPE errorCode){
+                    }</codeblock>
+                <codeblock props="electron" outputclass="language-typescript">on(
+                    evt: 'audioMixingStateChanged',
+                    cb: (state: number, err: number) => void
+                    ): this;</codeblock>
+                <codeblock props="unity" outputclass="language-csharp"/>
+                <codeblock props="rn" outputclass="language-typescript"/>
+                <codeblock props="flutter" outputclass="language-dart"/>
+            </p>
         </section>
         <section id="detailed_desc">
    
