--- a/cn/RTC/API/api_onaudioroutechanged.dita
+++ b/cn/RTC/API/api_onaudioroutechanged.dita
@@ -11,8 +11,17 @@
         </metadata>
     </prolog>
     <refbody><section id="prototype">
-        
-        <p outputclass="codeblock" conref="../conref/conref_rtc_api.dita#apidef/onAudioRouteChanged"/>
+        <p outputclass="codeblock">
+            <codeblock props="android" outputclass="language-java"/>
+            <codeblock props="ios mac" outputclass="language-objectivec"/>
+            <codeblock props="windows" outputclass="language-cpp">virtual void onAudioRouteChanged(AUDIO_ROUTE_TYPE routing) {
+                (void)routing;
+                }</codeblock>
+            <codeblock props="electron" outputclass="language-typescript"/>
+            <codeblock props="unity" outputclass="language-csharp"/>
+            <codeblock props="rn" outputclass="language-typescript"/>
+            <codeblock props="flutter" outputclass="language-dart"/>
+        </p>
         </section>
         <section id="parameters"><title>参数</title>
    <parml>
