--- a/cn/RTC/API/api_startaudiomixing.dita
+++ b/cn/RTC/API/api_startaudiomixing.dita
@@ -11,11 +11,22 @@
         </metadata>
     </prolog>
     <refbody><section id="prototype">
-        
-        <p outputclass="codeblock" conref="../conref/conref_rtc_api.dita#apidef/startAudioMixing"/>
+        <p outputclass="codeblock">
+            <codeblock props="android" outputclass="language-java"/>
+            <codeblock props="ios mac" outputclass="language-objectivec"/>
+            <codeblock props="windows" outputclass="language-cpp">virtual int startAudioMixing(const char* filePath, bool loopback, bool replace, int cycle) = 0;</codeblock>
+            <codeblock props="electron" outputclass="language-typescript">startAudioMixing(
+                filePath: string,
+                loopback: boolean,
+                replace: boolean,
+                cycle: number
+                ): number</codeblock>
+            <codeblock props="unity" outputclass="language-csharp"/>
+            <codeblock props="rn" outputclass="language-typescript"/>
+            <codeblock props="flutter" outputclass="language-dart"/>
+        </p>
         </section>
-        <section id="detailed_desc">
-   
+        <section id="detailed_desc"> 
             <p>该方法支持将本地或在线音乐文件和麦克风采集的音频进行混音或替换。成功播放音乐文件后，本地会触发 <xref keyref="onAudioMixingStateChanged"/> (<codeph>PLAY</codeph>) 回调。播放结束后，本地会触发 <apiname keyref="onAudioMixingStateChanged"/> (<codeph>STOPPED</codeph>) 回调。</p>
    <note type="attention">
        <ul>
