--- a/cn/RTC/API/class_livetranscoding.dita
+++ b/cn/RTC/API/class_livetranscoding.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="class_livetranscoding">
     <title><ph keyref="LiveTranscoding"/></title>
-    <shortdesc id="short"><ph id="shortdesc">管理旁路推流转码配置的类。</ph></shortdesc>
+    <shortdesc id="short"><ph id="shortdesc">CDN 直播推流的转码属性。</ph></shortdesc>
     <refbody>
         <section id="prototype">
    <p conref="../conref/conref_rtc_api.dita#apidef/LiveTranscoding"/>
@@ -13,32 +13,30 @@
    <plentry>
    <pt>width</pt>
                     <pd>
-                        <p>推流视频的总宽度，默认值 360，单位为像素。</p>
+                        <p>输出媒体流的宽，单位为像素。默认值为 360。</p>
                         <ul>
-                            <li>如果推视频流，<codeph>width</codeph> 值不得低于 64，否则 Agora 会调整为 64。</li>
-                            <li>如果推音频流，请将 <codeph>width</codeph> 和 <codeph>height</codeph> 设为
-                                0。</li>
+                            <li>如果输出视频流，<codeph>width</codeph> 的值不得低于 64，否则 Agora 会调整为 64。</li>
+                            <li>如果输出纯音频流，请将 <codeph>width</codeph> 设为 0。</li>
                         </ul>
                     </pd>
                 </plentry>
        <plentry>
   <pt>height</pt>
   <pd>
-      <p>推流视频的总高度，默认值 640，单位为像素。</p>
+      <p>输出媒体流的高，单位为像素。默认值为 640。</p>
       <ul>
- <li>如果推视频流，<codeph>height</codeph> 值不得低于 64，否则 Agora 会调整为 64。</li>
- <li>如果推音频流，请将 <codeph>width</codeph> 和 <codeph>height</codeph> 设为 0。</li>
+ <li>如果输出视频流，<codeph>height</codeph> 的值不得低于 64，否则 Agora 会调整为 64。</li>
+ <li>如果输出纯音频流，请将 <codeph>height</codeph> 设为 0。</li>
       </ul>
   </pd>
        </plentry>
        <plentry>
   <pt>videoBitrate</pt>
-  <pd>推流输出视频的码率。单位为 Kbps。400 Kbps 为默认值。用户可以根据 Video Profile 参考表中的码率值进行设置；如果设置的码率超出合理范围，Agora
-                        服务器会在合理区间内自动调整码率值。</pd>
+  <pd>输出媒体流的视频码率（Kbps）。默认值为 400。你可以参考 <xref href="https://docs.agora.io/cn/Interactive%20Broadcast/cdn_streaming_windows?platform=Windows" scope=external>推流到 CDN</xref> 设置该参数的值。</pd>
        </plentry>
        <plentry>
   <pt>videoFrameRate</pt>
-  <pd>推流输出视频的帧率，单位为 fps。取值范围是 (0,30]，默认值为 15。 <note type="attention">Agora 会将所有高于 30 fps 的帧率统一设 30 fps。</note></pd>
+  <pd>输出媒体流的视频帧率（fps）。默认值为 15，取值范围是 [1,30]。 <note type="attention">Agora 服务器会将高于 30 fps 的帧率统一调整为 30 fps。</note></pd>
        </plentry>
        <plentry>
   <pt>lowLatency</pt>
@@ -57,32 +55,32 @@
        </plentry>
        <plentry>
   <pt>videoGop</pt>
-  <pd>推流输出视频的 GOP。单位为帧。默认值为 30。</pd>
+  <pd>输出媒体流的视频 GOP（Group of Pictures)。默认值为 30。</pd>
        </plentry>
        <plentry>
        <pt>videoCodecProfile</pt>
        <pd>
-  <p>推流输出视频的编码规格，详见 <xref keyref="VIDEO_CODEC_PROFILE_TYPE"/>。</p>
-  <note type="attention">如果你将这个参数设为其他值，Agora 会将其设为默认值 100。</note>
+  <p>输出媒体流的视频编码规格，详见 <xref keyref="VIDEO_CODEC_PROFILE_TYPE"/>。</p>
+  <note type="attention">如果你把这个参数设为其他值，Agora 服务器会将其调整为默认值。</note>
        </pd>
    </plentry>
        <plentry>
   <pt>backgroundColor</pt>
-  <pd>推流输出视频的背景色，格式为 RGB 定义下的十六进制整数，不要带 # 号，如 <codeph>0xFFB6C1</codeph> 表示浅粉色。默认 <codeph>0x000000</codeph>，黑色。</pd>
+  <pd>输出媒体流的视频背景色。格式为 RGB 定义下的十六进制整数，不要带 # 号。如 <codeph>0xFFB6C1</codeph> 表示浅粉色。默认值为 <codeph>0x000000</codeph>，表示黑色。</pd>
        </plentry>
        <plentry>
   <pt>userCount</pt>
-  <pd>参与转码合图的用户数量，默认 0。</pd>
+  <pd>参与转码合流的主播数量。默认值为 0。</pd>
        </plentry>
        <plentry>
   <pt>transcodingUsers</pt>
   <pd>
-      <p>设置每个用户的转码合图参数，最多支持 17 个用户。详见 <xref keyref="TranscodingUser"/>。</p>
+      <p>参与转码合流的每个主播的设置。Agora 频道内最多支持 17 个主播。详见 <xref keyref="TranscodingUser"/>。</p>
   </pd>
        </plentry>
        <plentry>
   <pt>transcodingExtraInfo</pt>
-  <pd>预留参数：用户自定义的发送到旁路推流客户端的信息。用于填充 H.264/H.265 视频中 SEI 帧内容。长度限制 4096 字节。关于 SEI 的详细信息，详见 <xref keyref="faq-sei" scope="external" format="html"/>。</pd>
+  <pd>输出媒体流中嵌入的用户 SEI 信息。用于向 CDN 推送 SEI 信息。长度限制 4096 字节。详见 <xref keyref="faq-sei" scope="external" format="html"/>。</pd>
        </plentry>
        <plentry>
   <pt>metadata</pt>
@@ -98,11 +96,11 @@
        </plentry>
        <plentry>
   <pt>watermark</pt>
-  <pd>推流输出视频上的水印图片，必须为 PNG 格式。添加后所有旁路直播的观众都可以看到水印。水印图片的定义详见 <xref keyref="RtcImage"/>。</pd>
+  <pd>输出媒体流的视频水印。必须为 PNG 格式。详见 <xref keyref="RtcImage"/>。</pd>
        </plentry>
        <plentry>
   <pt>backgroundImage</pt>
-  <pd>推流输出视频上的背景图片。添加后所有旁路直播的观众都可以看到背景图片。背景图片的定义详见 <xref keyref="RtcImage"/>。</pd>
+  <pd> 输出媒体流的视频背景图。详见 <xref keyref="RtcImage"/>。</pd>
        </plentry>
        <plentry>
   <pt>audioSampleRate</pt>
@@ -110,11 +108,11 @@
        </plentry>
        <plentry>
   <pt>audioBitrate</pt>
-  <pd>推流输出的音频码率，单位为 Kbps。默认值为 48，最大值为 128。</pd>
+  <pd>输出媒体流的音频码率 (Kbps)。默认值为 48，最大值为 128。</pd>
        </plentry>
        <plentry>
   <pt>audioChannels</pt>
-  <pd>用于旁路推流的输出音频的声道数。取值范围为 [1,5] 中的整型，默认值为 1，建议取 1 或 2。
+  <pd>输出媒体流的音频声道数。默认值为 1。建议取值为 1 或 2。
       <ul>
       <li>1: （默认）单声道</li>
       <li>2: 双声道</li>
@@ -126,7 +124,7 @@
        </plentry>
        <plentry>
   <pt>audioCodecProfile</pt>
-  <pd>推流输出音频的编码规格，详见 <xref keyref="AUDIO_CODEC_PROFILE_TYPE"/>。</pd>
+  <pd>输出媒体流的音频编码规格。详见 <xref keyref="AUDIO_CODEC_PROFILE_TYPE"/>。</pd>
        </plentry>
    </parml>
         </section></refbody>
