--- a/cn/RTC/API/class_screencaptureparameters.dita
+++ b/cn/RTC/API/class_screencaptureparameters.dita
@@ -12,12 +12,12 @@
             <parml>
                 <plentry>
                     <pt>dimensions</pt>
-                    <pd><p>屏幕共享视频发送的最大像素值。详见 <xref keyref="VideoDimensions"/>。默认值为 1920 × 1080，即
+                    <pd><p>编码共享视频的最大像素值。详见 <xref keyref="VideoDimensions"/>。默认值为 1920 × 1080，即
                             2073600 像素。该像素值为计费标准。</p>
-                        <p>当共享的屏幕分辨率宽高比与该值设置不一致时，SDK 按如下策略进行编码。假设 dimensions 为 1920 × 1080：<ul>
-                                <li>如果屏幕分辨率小于 dimensions，如 1000 × 1000，SDK 直接按 1000 × 1000
+                        <p>当共享的屏幕分辨率宽高比与该值设置不一致时，SDK 按如下策略进行编码。假设 <codeph>dimensions</codeph> 设为 1920 × 1080：<ul>
+                                <li>如果屏幕分辨率小于 <codeph>dimensions</codeph>，如 1000 × 1000，SDK 直接按 1000 × 1000
                                     进行编码。</li>
-                                <li>如果屏幕分辨率大于 dimensions，如 2000 × 1500，SDK 按屏幕分辨率的宽高比，即 4:3，取
+                                <li>如果屏幕分辨率大于 <codeph>dimensions</codeph>，如 2000 × 1500，SDK 按屏幕分辨率的宽高比，即 4:3，取
                                     dimensions 以内的最大分辨率进行编码，即 1440 × 1080。</li>
                             </ul></p>
                     </pd>
