--- a/cn/RTC/API/class_transcodinguser.dita
+++ b/cn/RTC/API/class_transcodinguser.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="class_transcodinguser">
     <title><ph keyref="TranscodingUser"/></title>
-    <shortdesc id="short"><ph id="shortdesc">管理参与旁路推流转码的主播。</ph></shortdesc>
+    <shortdesc id="short"><ph id="shortdesc">参与转码合流的每个主播的设置。</ph></shortdesc>
     <refbody>
         <section id="prototype">
    <p conref="../conref/conref_rtc_api.dita#apidef/TranscodingUser"/>
@@ -13,27 +13,26 @@
    <plentry>
        <pt>uid</pt>
        <pd>
-  <p>参与推流转码的主播用户 ID。</p>
+  <p>主播的用户 ID。</p>
        </pd>
    </plentry>
    <plentry>
        <pt>x</pt>
        <pd>
-  <p>主播视频画面相对推流输出视频左上角的横坐标绝对值 (pixel)。取值范围为转码配置（<xref keyref="LiveTranscoding"/>）定义中设置的
-                            [0,width]。</p></pd>
+  <p>主播视频画面在输出视频画面的 x 坐标 (pixel)，以输出视频画面的左上角为原点。取值范围为[0, width]，width 为 <xref keyref="LiveTranscoding"/> 中设置的 <codeph>width</codeph>。</p></pd>
    </plentry>
                 <plentry>
                     <pt>y</pt>
-                    <pd>主播视频画面相对推流输出视频左上角的纵坐标绝对值 (pixel)。取值范围为转码配置参数定义中设置的 [0,height]。</pd>
+                    <pd>主播视频画面在输出视频画面的 y 坐标 (pixel)，以输出视频画面的左上角为原点。取值范围为[0, height]，height 为 <xref keyref="LiveTranscoding"/> 中设置的 <codeph>height</codeph>。</pd>
                 </plentry>
                 <plentry>
                     <pt>width</pt>
-                    <pd>主播视频画面的宽度 (pixel)。</pd>
+                    <pd>主播视频画面的宽 (pixel)。</pd>
                 </plentry>
                 <plentry>
                     <pt>height</pt>
                     <pd>
-                        <p>主播视频画面的高度 (pixel)。</p>
+                        <p>主播视频画面的高 (pixel)。</p>
                     </pd>
                 </plentry>
                 <plentry>
@@ -56,8 +55,8 @@
                     <pt>alpha</pt>
                     <pd>
                         <p>主播视频画面的透明度。取值范围为 [0.0, 1.0]。<ul>
-                                <li>0.0: 该区域图像完全透明。</li>
-                                <li>1.0:（默认）该区域图像完全不透明。</li>
+                                <li>0.0: 完全透明。</li>
+                                <li>1.0:（默认）完全不透明。</li>
                             </ul>
                         </p>
                     </pd>
@@ -65,8 +64,8 @@
             <plentry>
                 <pt>audioChannel</pt>
                 <pd>
-                        <p>主播音频在输出音频中占用的声道。取值范围为 [0,5]，默认值为 0：<ul id="ul_ugm_rrh_v4b">
-                                <li><codeph>0</codeph>: （推荐）默认混音设置，最多支持双声道，与主播端上行音频相关。</li>
+                        <p>主播音频在输出音频中占用的声道。默认值为 0，取值范围为 [0,5]：<ul id="ul_ugm_rrh_v4b">
+                                <li><codeph>0</codeph>: （推荐）默认混音设置，最多支持双声道，与主播上行音频相关。</li>
                                 <li><codeph>1</codeph>: 主播音频在输出音频的 FL 声道。如果主播上行音频是多声道，Agora
                                     服务器会先把多声道混音成单声道。</li>
                                 <li><codeph>2</codeph>: 主播音频在输出音频的 FC 声道。如果主播上行音频是多声道，Agora
